refactor: clean up freeway-http engine structure, delete dead code, optimize hot path